unpackaged/main/default/objects/Structure__c/Structure__c.object-meta.xml
<CustomObject>
    <label>Structure</label>
    <nameField>
        <label>Nom de la Structure</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Structures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>