unpackaged/main/default/objects/Structure__c/fields/ID_Externe__c.field-meta.xml
<CustomField>
    <fullName>ID_Externe__c</fullName>
    <externalId>true</externalId>
    <label>ID Externe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>