unpackaged/main/default/objects/Structure__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Pole__c</columns>
    <columns>BU__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>